# research

altenative/: 5X_ReSkin_BOM.xlsx  index.html  index.html.txt  pickandplace.xlsx  script.js  style.css
healthy_calendar/: index.html  script.js  style.css
in_ears/: index.html  script.js  style.css
miCADstructure/: .gitignore  README.md
miCADstructure/Data_Input/: 8cube.STL  microstructure.STL
miCADstructure/Tools/: README.md  app.py  data.json
miCADstructure/Tools/PBC Hall Customization/: AutoOpenEquations.swp  Base.SLDPRT  PCB Hall.SLDPRT  template.prtprp
miCADstructure/Tools/core/: create_stage3_base.py  stage1_lattice.py
miCADstructure/Tools/matopt/lib/clipper/: CMakeLists.txt
miCADstructure/Tools/matopt/lib/clipper/matopt_clipper/: clipper.cpp  clipper.hpp
miCADstructure/Tools/matopt/lib/predicates/: CMakeLists.txt  predicates_psm.cpp  predicates_psm.h
miCADstructure/Tools/matopt/src/lib/: CMakeLists.txt  convert.cpp  convert.h  eigen_utils.h  logger.cpp  logger.h  material_optimization.cpp  material_optimization.h  material_optimization_gd.cpp  material_optimization_gd.h  material_optimization_ipopt.cpp  material_optimization_ipopt.h  material_optimization_lbfgs.cpp  material_optimization_lbfgs.h  materials_ext.cpp  materials_ext.h  mesh_utils.cpp  mesh_utils.h  polygons.cpp  polygons.h
miCADstructure/Tools/microstructure_inflators/: CMakeLists.txt  SUMMARY.md  build.sh  create_pouch.py  cut-cell.ipynb  cut-cell_executed.ipynb  data.json  regular.ipynb
miCADstructure/Tools/microstructure_inflators/data/results/Siggraph_2015/smile_smaller/: run.sh
miCADstructure/Tools/microstructure_inflators/src/lib/: CMakeLists.txt
miCADstructure/Tools/microstructure_inflators/src/lib/MeshFEM/: BoundaryMesh.hh  CMakeLists.txt  Functions.hh  Future.hh  MSHFieldParser.cc  MSHFieldParser.hh  MSHFieldWriter.hh  MeshIO.cc  Parallelism.hh  PeriodicBoundaryMatcher.hh  TetMesh.hh  TetMesh.inl  Timer.hh  TriMesh.hh  TriMesh.inl  Triangulate.h  Types.cc  util.h
miCADstructure/Tools/microstructure_inflators/src/lib/MeshFEM/Handles/: Handle.hh  TetMeshHandles.hh  TriMeshHandles.hh
miCADstructure/Tools/microstructure_inflators/src/lib/MeshFEM/Utilities/: EdgeAccessAdaptor.hh  EdgeSoupAdaptor.hh
miCADstructure/Tools/microstructure_inflators/src/lib/MeshFEM/filters/: CurveCleanup.hh  ResampleCurve.hh  extract_polygons.hh  quad_tri_subdiv_asymmetric.hh  reflect.hh
miCADstructure/Tools/microstructure_inflators/src/lib/isosurface_inflator/: AutomaticDifferentiation.hh  BoxIntersection1DFeatures.hh  BoxIntersectionMesher.hh  CGALClippedVolumeMesher.cc  CGALClippedVolumeMesher.hh  CMakeLists.txt  ConvexHullTriangulation.hh  GraphLineMesher.hh  IGLSurfaceMesherMC.cc  IGLSurfaceMesherMC.hh  IsosurfaceInflator.cc  IsosurfaceInflatorImpl.hh  Joint.hh  MesherBase.hh  MeshingOptions.cc  MidplaneMesher.cc  MidplaneMesher.hh  NodePositioners.hh  PatternSignedDistance.hh  PostProcess.cc  PostProcess.hh  SignedDistance.hh  SnapAndReflect.hh  SphereConvexHull.hh  StitchedWireMesh.hh  Symmetry.hh  VCGSurfaceMesher.hh  VDBTools.cc  VDBTools.hh  WireMesh.hh  rasterize.hh
miCADstructure/Tools/microstructure_inflators/src/lib/isosurface_inflator/MarchingSquares/: Grid.hh
miCADstructure/Tools/microstructure_inflators/src/lib/isosurface_inflator/blending/: NonConvexBlending.hh  PiecewiseBlending.hh  PolynomialConvexBlending.hh
miCADstructure/Tools/microstructure_inflators/src/lib/isosurface_inflator/blending/doc/: Charts.mw  KS_monotonic_derivative_8parameters.mw  KS_nonconvex_8parameters.mw  KS_piecewise.mw  KS_piecewise_example.mw  blending.bib  blending.tex
